<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_tools"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_gallery2"
            android:checked="true"
            android:title="@string/menu_gallery"
            app:actionViewClass="android.widget.TextView" />
    </group>

    <item android:title="@string/tele">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
