<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextInputLayout">

    <EditText
        android:id="@+id/activity_text_input_layout__editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usual_text"
        app:layout_constraintBottom_toTopOf="@id/activity_text_input_layout__editText2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:importantForAutofill="no"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_text_input_layout__editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/HintText"
        app:layout_constraintBottom_toTopOf="@id/activity_text_input_layout__editText3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_text_input_layout__editText1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/style_text"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_text_input_layout__editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_text_input_layout__editText2"
        app:counterTextAppearance="@style/CounterText"
        app:counterOverflowTextAppearance="@style/OverCounterText"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/counter_text"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>